[tool.poetry]
name = "django-custom-user"
version = "0.1.0"
description = ""
authors = ["m7madmomani2 <mohammad.momani1996.kk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
django-allauth = "^0.44.0"
django-crispy-forms = "^1.12.0"
django-debug-toolbar = "^3.2.1"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
